--- a/views/register.html
+++ b/views/register.html
@@ -9,8 +9,17 @@
 	<link rel="stylesheet" href="../css/main.css">
 	<title>Register Lyft</title>
 </head>
-<body>
-	
+<body class="lyft-bckg">
+	<main class="container-flex-row">
+	  <div class="container">
+          <div class="row">
+              <div class="col-xs-12">
+                  <a href="signup.html" type="button" class="btn btn-default col-xs-6 " id="signup">SIGN UP</a>
+                  <a href="login.html" type="button" class="btn btn-default col-xs-6 "id="login">LOGIN</a>
+              </div>
+          </div>
+      </div>
+	</main>	
 	
 	<script src="../vendors/jquery/jquery-3.2.1.min.js"></script>
 	<script src="../js/register.js"></script>
