añade vista phone

--- a/views/register.html
+++ b/views/register.html
@@ -14,8 +14,8 @@
 	  <div class="container">
           <div class="row">
               <div class="col-xs-12">
-                  <a href="signup.html" type="button" class="btn btn-default col-xs-6 " id="signup">SIGN UP</a>
-                  <a href="login.html" type="button" class="btn btn-default col-xs-6 "id="login">LOGIN</a>
+                  <a href="login.html" type="button" class="btn btn-default col-xs-6 " id="signup">LOG IN</a>
+                  <a href="phone.html" type="button" class="btn btn-default col-xs-6 "id="login">SIGN UP</a>
               </div>
           </div>
       </div>
