--- a/views/signup.html
+++ b/views/signup.html
@@ -10,7 +10,35 @@
 	<title>Sign up lyft</title>
 </head>
 <body>
-
+	<a href="register.html" type="button" class="btn btn-default">
+		<span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
+	</a>
+	<main class="container-flex-column">
+		<div class="container">
+  			<div class="row">
+	  			<div class="col-xs-12">
+						<h1 class="text">Sign Up</h1>
+						<h4 class="text">Join now for free ride credit.</h4>
+					<form>
+			  			<div class="form-group">
+							<label for="exampleInputEmail1">Email address</label>
+							<input type="email" class="form-control" id="input-email" placeholder="Email">
+			  			</div>
+			  			<div class="form-group">
+							<label for="exampleInputPassword1">Password</label>
+							<input type="password" class="form-control" id="input-password" placeholder="Password">
+			  			</div>
+			  			<div class="checkbox">
+							<label>
+								<input type="checkbox" id="checking"> Check me out
+							</label>
+						</div>
+			  			<button type="submit" class=" col-xs-12 btn btn-success" disabled>NEXT</button>
+					</form>
+	  			</div>
+  			</div>
+		</div>
+	</main>
 	<script src="../vendors/jquery/jquery-3.2.1.min.js"></script>
 	<script src="../js/signup.js"></script>
 </body>
