--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
 	font-family: 'Raleway', sans-serif !important;
 	color: #fff;
 }
-.h1 {
+.text{
 	color:black;
 }
 .backgr {
@@ -42,6 +42,12 @@ body {
 	padding:2em;
 	height: 100vh;
 }
+/* Estilos vista phone */
 
-
-
+.phone-number {
+	display: inline-block;
+	vertical-align: top;
+}
+.space {
+	margin-bottom: 10em;
+}
